Se agrego el titulo y una descripción

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Monty Hall Game</title>
 </head>
 <body>
-    
+    <div>
+        <h2>El dilema de Monty Hall</h2>
+        <main>
+            <section>
+                <p>El problema de Monty Hall es un problema matemático de probabilidad basado en el concurso televisivo estadounidense Trato hecho (Let's Make a Deal).
+                </p>
+                <h3>¿Cúal sería la opción correcta?</h3>
+                <ul>
+                    <li>Quedarse con la puerta inicial?</li>
+                    <li>Cambiar a la otra puerta?</li>
+                    <li>Es irrelevante cambiar o no cambiar?</li>
+                </ul>
+            </section>
+        </main>
+    </div>
 </body>
 </html>
