se añadieron 3 contenedores (div)

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
                     <li>Cambiar a la otra puerta?</li>
                     <li>Es irrelevante cambiar o no cambiar?</li>
                 </ul>
+                <div>
+                    <div>
+                        <div>
+                            
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
     </div>
