se añadieron las rutas de la imgs a el index

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
                 <div>
                     <div>
                         <div>
-                            
+                            <img src="door_bg.png" class="monty__bg" alt="door">
+                            <img src="Carbon.png" id="camb1" class="monty__goat" alt="goat">
+                            <img src="door2.png" id="doorOpen" class="monty__door" alt="door">
+                            <img src="hand.png" id="hd1" class="monty__hand">
                         </div>
                     </div>
                 </div>
