--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
                             <img src="door2.png" id="doorOpen" class="monty__door" alt="door">
                             <img src="hand.png" id="hd1" class="monty__hand">
                         </div>
+                        <div>
+                            <img src="door_bg.png" class="monty__bg" alt="door">
+                            <img src="Carbon.png" id="camb1" class="monty__goat" alt="goat">
+                            <img src="door2.png" id="doorOpen" class="monty__door" alt="door">
+                            <img src="hand.png" id="hd1" class="monty__hand">
+                        </div>
+                        <div>
+                            <img src="door_bg.png" class="monty__bg" alt="door">
+                            <img src="Carbon.png" id="camb1" class="monty__goat" alt="goat">
+                            <img src="door2.png" id="doorOpen" class="monty__door" alt="door">
+                            <img src="hand.png" id="hd1" class="monty__hand">
+                        </div>
                     </div>
                 </div>
             </section>
