se añadio circunstancias de la respuesta al juego

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                         </div>
                     </div>
                 </div>
+                <h3>En base a que circusntacia fue su respuesta?</h3>
+                <label><input type="checkbox">Intuicion</label>
+                <label><input type="checkbox">Psicologia inversa</label>
+                <label><input type="checkbox">logica Matematica</label><br>
+                <label><input type="button" value="Jugar de nuevo"></label>
             </section>
         </main>
     </div>
