se añadieron los id y clases de todos los contenedores

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Monty Hall Game</title>
 </head>
 <body>
-    <div>
+    <div class="container">
         <h2>El dilema de Monty Hall</h2>
-        <main>
-            <section>
+        <main class="inner-page">
+            <section class="content">
                 <p>El problema de Monty Hall es un problema matemático de probabilidad basado en el concurso televisivo estadounidense Trato hecho (Let's Make a Deal).
                 </p>
                 <h3>¿Cúal sería la opción correcta?</h3>
@@ -18,21 +18,25 @@
                     <li>Cambiar a la otra puerta?</li>
                     <li>Es irrelevante cambiar o no cambiar?</li>
                 </ul>
-                <div>
-                    <div>
-                        <div>
+                <div class="row mt-4">
+                    <div class="col-4">
+                        <div class="monty-card" id="card_1">
                             <img src="img/door_bg.png" class="monty__bg" alt="door">
                             <img src="img/Carbon.png" id="camb1" class="monty__goat" alt="goat">
                             <img src="img/door2.png" id="doorOpen" class="monty__door" alt="door">
                             <img src="img/hand.png" id="hd1" class="monty__hand">
                         </div>
-                        <div>
+                    </div>
+                    <div class="col-4"> 
+                        <div class="monty-card" id="card_1">
                             <img src="img/door_bg.png" class="monty__bg" alt="door">
                             <img src="img/Carbon.png" id="camb1" class="monty__goat" alt="goat">
                             <img src="img/door2.png" id="doorOpen" class="monty__door" alt="door">
                             <img src="img/hand.png" id="hd1" class="monty__hand">
                         </div>
-                        <div>
+                    </div>
+                    <div class="col-4">
+                        <div class="monty-card" id="card_1">
                             <img src="img/door_bg.png" class="monty__bg" alt="door">
                             <img src="img/Carbon.png" id="camb1" class="monty__goat" alt="goat">
                             <img src="img/door2.png" id="doorOpen" class="monty__door" alt="door">
