Se añadieron nuevos estilos en .css

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <h2>El dilema de Monty Hall</h2>
+        <h2 class="titulo">El dilema de Monty Hall</h2>
         <main class="inner-page">
             <section class="content">
                 <p>El problema de Monty Hall es un problema matemático de probabilidad basado en el concurso televisivo estadounidense Trato hecho (Let's Make a Deal).
+                </p>
+                <p>
+                    En este concurso, el concursante escoge una puerta entre tres, y su premio consiste en lo que se encuentra detrás. Una de ellas oculta un coche, y tras las otras dos hay una cabra. Sin embargo, antes de abrirla, el presentador, que sabe donde esta el premio, abre una de las otras dos puertas y muestra que detrás de ella hay una cabra. Ahora tiene el concursante una última oportunidad de cambiar la puerta escogida ¿Debe el concursante mantener su elección original o escoger la otra puerta? ¿Hay alguna diferencia?
                 </p>
                 <h3>¿Cúal sería la opción correcta?</h3>
                 <ul>
@@ -45,7 +48,7 @@
                         </div>
                     </div>
                 </div>
-                <h3>En base a que circusntacia fue su respuesta?</h3>
+                <h3>En base a que circunstacia fue su respuesta?</h3>
                 <label><input type="checkbox">Intuicion</label>
                 <label><input type="checkbox">Psicologia inversa</label>
                 <label><input type="checkbox">logica Matematica</label><br>
